src/objects/Members__c.object
<CustomObject>
    <description>Member in a project/sub project</description>
    <fields>
        <fullName>Cost_center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost center</label>
        <referenceTo>Costcentre__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_del__c</fullName>
        <formula>ProjUsers__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketingmebers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketingmebers</label>
        <referenceTo>Marketing_activity__c</referenceTo>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjMembers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjUsers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role in Project</label>
        <picklist>
            <picklistValues>
                <fullName>Member</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Viewer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubProjMembers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Subproject__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internal User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <label>Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Member</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Member set name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <recordTypes>
        <fullName>Community_User</fullName>
        <active>false</active>
        <description>It is used for customers and other members in portal</description>
        <label>Community User</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_User</fullName>
        <active>true</active>
        <description>It is used for inside company members</description>
        <label>Internal User</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>